refactor: deduplicate WAR by consolidating all JARs into WEB-INF/lib/
Eliminate ~35MB of duplicate JARs across swing-boot/, swing-lib/, and
server-lib/ by moving all JARs into a single WEB-INF/lib/ directory.
Class isolation is maintained via glob-filtered classloaders at runtime.

- Main.java: shared parent classloader + per-role whitelist filtering
- CommonUtil: boot classloader scans lib/ instead of swing-boot/
- build.gradle: flat copy into lib/, no routing logic
- New: webswing-classloader-whitelists.properties (single source of truth)

Signed-off-by: manticore-projects <andreas@manticore-projects.com>