@@ -17,13 +17,8 @@ import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.net.URLDecoder;
-import java.nio.file.FileSystems;
-import java.nio.file.FileSystem;
-import java.nio.file.Path;
-import java.nio.file.PathMatcher;
 import java.security.ProtectionDomain;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class CommonUtil {
 	public static final int bufferSize = 4 * 1024;
@@ -31,18 +26,6 @@ public class CommonUtil {
 	private static final Logger log = LoggerFactory.getLogger(CommonUtil.class);
 	private static final Map<String, byte[]> iconMap = new HashMap<String, byte[]>();
 	private static URLClassLoader swingBootClassLoader;
-
-	private static final String WHITELISTS_RESOURCE = "webswing-classloader-whitelists.properties";
-
-	/**
-	 * All WEB-INF subdirectories that may contain JARs needed for the
-	 * child Swing process bootclasspath.  Scanned in order; first match wins.
-	 */
-	private static final String[] BOOT_DIRS = {
-			"WEB-INF/swing-boot",
-			"WEB-INF/swing-lib",
-			"WEB-INF/lib"
-	};
 
 	public static byte[] loadImage(File iconFile) {
 		String icon;
@@ -196,43 +179,22 @@ public class CommonUtil {
 	}
 
 	/**
-	 * Build a classloader that spans all WAR directories relevant for the
-	 * child Swing process: swing-boot, swing-lib, and lib (shared).
-	 *
-	 * This replaces the previous implementation that only scanned swing-boot.
-	 * With JAR deduplication, shared third-party JARs now live exclusively
-	 * in WEB-INF/lib/ and must be found there.
+	 * Build a classloader covering all JARs in WEB-INF/lib/.
+	 * With deduplicated WAR layout, all JARs live in this single directory.
 	 */
 	private static URLClassLoader getSwingBootClassLoader() throws IOException {
 		if (swingBootClassLoader == null) {
-			String warLocation = getWarFileLocation();
-			boolean isFile = new File(URI.create(warLocation)).isFile();
-			boolean isDir = new File(URI.create(warLocation)).isDirectory();
-
-			List<URL> allUrls = new ArrayList<>();
-			for (String dir : BOOT_DIRS) {
-				URL dirUrl;
-				if (isFile) {
-					dirUrl = new URL("jar:" + warLocation + "!/" + dir);
-				} else if (isDir) {
-					dirUrl = new URL(warLocation + dir);
-				} else {
-					continue;
-				}
-
-				try {
-					List<URL> filesFromDir = Main.getFilesFromPath(dirUrl);
-					allUrls.addAll(filesFromDir);
-				} catch (Exception e) {
-					// Directory may not exist (e.g. exploded WAR without swing-boot)
-					log.debug("Skipping {} for boot classloader: {}", dir, e.getMessage());
-				}
+			URL libFolder;
+			if (new File(URI.create(getWarFileLocation())).isFile()) {
+				libFolder = new URL("jar:" + getWarFileLocation() + "!/WEB-INF/lib");
+			} else if (new File(URI.create(getWarFileLocation())).isDirectory()) {
+				libFolder = new URL(getWarFileLocation() + "WEB-INF/lib");
+			} else {
+				throw new IOException("WAR location not found: " + getWarFileLocation());
 			}
-
-			log.info("Boot classloader: {} JARs from {}", allUrls.size(),
-					 Arrays.toString(BOOT_DIRS));
-
-			swingBootClassLoader = new URLClassLoader(allUrls.toArray(new URL[0]));
+			List<URL> filesFromPath = Main.getFilesFromPath(libFolder);
+			log.info("Boot classloader: {} JARs from WEB-INF/lib", filesFromPath.size());
+			swingBootClassLoader = new URLClassLoader(filesFromPath.toArray(new URL[0]));
 		}
 		return swingBootClassLoader;
 	}
